updating pom to attempt to fix travis ci surefire failure