@@ -222,6 +222,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.plugin.surefire}</version>
                 <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <forkCount>2</forkCount>
                     <includes>
                         <include>**/*Test*</include>
